seguimos con mongodb

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
         <form id="formulario_nomColeccion">
           <h1>Introduzca el nombre de la colección a guardar:</h1>
           <input type="text" id="DB" name="DB">
-          <button class ="example" type="button" id="Boton_enviar">Enviar</button>        
+          <button class ="example" type="button" id="Boton_enviar" autofocus >Enviar</button>        
           
         </form>
       </div>
