--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,8 +47,8 @@
         
         <form id="formulario_nomColeccion">
           <h1>Introduzca el nombre de la colección a guardar:</h1>
-          <input type="text" id="DB" name="DB">
-          <button class ="example" type="button" id="Boton_enviar" autofocus >Enviar</button>        
+          <input type="text" id="DB" name="DB" placeholder="Introduzca el nombre del fichero a crear en la BD" autofocus>
+          <button class ="Guardar" type="button" id="Boton_enviar" name="Boton_enviar">Enviar</button>        
           
         </form>
       </div>
