seguimos con mongo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,7 @@
               <button class ="example" type="button">input</button>
               <button class ="example" type="button">input2</button>
               <button class ="example" type="button">input3</button>
+              <!--button class ="example" type="button">input4</button-->
             </div>
           </th>
         </tr>
@@ -47,7 +48,7 @@
         
         <form id="formulario_nomColeccion">
           <h1>Introduzca el nombre de la colección a guardar:</h1>
-          <input type="text" id="DB" name="DB" placeholder="Introduzca el nombre del fichero a crear en la BD" autofocus>
+          <input autofocus type="text" id="DB" name="DB" placeholder="nombre_fichero.csv$">
           <button class ="Guardar" type="button" id="Boton_enviar" name="Boton_enviar">Enviar</button>        
           
         </form>
