--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,10 +47,9 @@
       <div id="div_oculto">
         
         <form id="formulario_nomColeccion">
-          <h1>Introduzca el nombre de la colección a guardar:</h1>
-          <input autofocus type="text" id="DB" name="DB" placeholder="nombre_fichero.csv$">
+          <h1>Introduzca el nombre de la colección a guardar:</h1><!-- -->
+          <input autofocus type="text" id="DB" name="DB" placeholder="nombre_fichero.csv">
           <button class ="Guardar" type="button" id="Boton_enviar" name="Boton_enviar">Enviar</button>        
-          
         </form>
       </div>
 
