--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
         </tr>
         <tr>
           <th>
-            <div class="example">
+            <div class="examples">
               Click para cargar ejemplos:
               <button class ="example" type="button">input</button>
               <button class ="example" type="button">input2</button>
@@ -48,7 +48,7 @@
         
         <form id="formulario_nomColeccion">
           <h1>Introduzca el nombre de la colección a guardar:</h1><!-- -->
-          <input autofocus type="text" id="DB" name="DB" placeholder="nombre_fichero.csv">
+          <input autofocus type="text" id="DB" name="DB" placeholder="nombre_fichero.csv$">
           <button class ="Guardar" type="button" id="Boton_enviar" name="Boton_enviar">Enviar</button>        
         </form>
       </div>
