--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,9 +26,9 @@
           <th>
             <div class="examples">
               Click para cargar ejemplos:
-              <button class ="example" type="button">input</button>
-              <button class ="example" type="button">input2</button>
-              <button class ="example" type="button">input3</button>
+              <button class ="example" type="button" id="input1">input</button>
+              <button class ="example" type="button" id="input2">input2</button>
+              <button class ="example" type="button" id="input3">input3</button>
               <!--button class ="example" type="button">input4</button-->
             </div>
           </th>
