Añadido textbox user

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,9 +47,14 @@
       <div id="div_oculto">
         
         <form id="formulario_nomColeccion">
-          <h1>Introduzca el nombre de la colección a guardar:</h1><!-- -->
-          <input autofocus type="text" id="DB" name="DB" placeholder="nombre_fichero.csv$">
-          <button class ="Guardar" type="button" id="Boton_enviar" name="Boton_enviar">Enviar</button>        
+          
+           <h2>Introduzca su nombre:</h2><!-- -->
+          <input autofocus type="text" id="user" name="user" placeholder="...">
+         
+          <h3>Introduzca el nombre de la colección a guardar:</h3><!-- -->
+          <input autofocus type="text" id="DB" name="DB" placeholder="nombre_fichero.csv">
+          <button class ="Guardar" type="button" id="Boton_enviar" name="Boton_enviar">Enviar</button>  
+          
         </form>
       </div>
 
