--- a/public/generado.css
+++ b/public/generado.css
@@ -1,6 +1,5 @@
 body {
   font: Helvetica, sans-serif;
-  /*background-color: #A4A4A4;*/
   background-image: url("http://img.webme.com/pic/p/procssdesign/bg-1.jpg");
   width: 70%;
   height: 90%;
@@ -33,8 +32,9 @@ body {
     box-sizing:border-box;
     width: 70%;
     border-top: 2px solid #000;}
+    
+    
     footer #pie a {
-
       margin: 3px auto;
       text-decoration: none;
       background: #000;
@@ -54,8 +54,13 @@ body {
   }
 
   body #formulario_nomColeccion{
-    
     margin: 5px;
     text-align: center;
+  }
+  
+  body .example_saved{
+    margin-top: 10px;
+    background-color: #DF013A;
+    font: #FFF;
   }
 /*# sourceMappingURL=generado.css.map */
