--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <tr><th>Arrastre un fichero CSV hasta la zona de entrada</th></tr>
         <tr>
           <th>
-            <textarea class = "drop_zone" autofocus="" cols = "80" rows = "5" id="original"></textarea>
+            <textarea class = "drop_zone" cols = "80" rows = "5" id="original"></textarea>
           </th>
           <th>
             <button type="button" id="parse"> Analizar!</button>
@@ -42,15 +42,14 @@
       </table>
       <br>
       <br>
-      
+      <div id="div_a_ocultar">
+         <h2>Introduzca su nombre:</h2><!-- -->
+          <input autofocus placeholder="" type="text" id="USER" name="USER" placeholder="...">
+          <button class ="Guardar" type="button" id="Boton_nombre" name="Boton_nombre">Submit</button>
+      </div>
       <!-- div oculto que se mostrará al pulsar sobre el boton guardar -->
       <div id="div_oculto">
-        
         <form id="formulario_nomColeccion">
-          
-           <h2>Introduzca su nombre:</h2><!-- -->
-          <input autofocus type="text" id="user" name="user" placeholder="...">
-         
           <h3>Introduzca el nombre de la colección a guardar:</h3><!-- -->
           <input autofocus type="text" id="DB" name="DB" placeholder="nombre_fichero.csv">
           <button class ="Guardar" type="button" id="Boton_enviar" name="Boton_enviar">Enviar</button>  
